# saopicc-schemas

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pre-commit.yml  readthedocs.yml
docs/source/: changelog.rst  conf.py  index.rst  introduction.rst  minutes.rst
saopicc_schemas/: AntennaGains.py  __init__.py  antenna_gains.py
tests/: test_basic.py  test_kms_gain.py
