[project]
name = "saopicc-schemas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xarray-dataclasses>=1.9.1",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.4.2",
]
docs = [
    "sphinx>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
