[project]
name = "saopicc-schemas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xarray-dataclasses>=1.9.1",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.4.2",
]
docs = [
    "sphinx>=8.2.3",
    "sphinxcontrib-spelling",
    "pygments>=2.18.0",
    "sphinx-copybutton>=0.5.2",
    "pydata-sphinx-theme>=0.15.4",
    "ipython>=8.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
