[project]
name = "saopicc-schemas"
version = "0.1.0"
description = "SAOPICC Data Format Schemas"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "xarray-dataclasses>=1.9.1",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.4.2",
]
docs = [
    "sphinx>=8.2.3",
    "sphinxcontrib-spelling",
    "pygments>=2.18.0",
    "sphinx-copybutton>=0.5.2",
    "pydata-sphinx-theme>=0.15.4",
    "ipython>=8.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
    "tbump>=6.11.0",
]

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
extend-select = ["I"]
